--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.6",
+    "formik": "^2.2.9",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
