--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/yup": "^0.32.0",
     "axios": "^1.3.6",
     "formik": "^2.2.9",
     "json-server": "^0.17.3",
@@ -25,7 +26,8 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.62.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "set PORT=4000 && react-scripts start",
